SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR}/bin/macrocirculation_unittests/)

add_library(Macrocirculation_Test_Runner run_tests.cpp)
target_link_libraries(Macrocirculation_Test_Runner PUBLIC Catch2::Catch2)
target_link_libraries(Macrocirculation_Test_Runner PUBLIC MPI::MPI_CXX)

add_executable(Macrocirculation_Test_BufferSystem test_buffer_system.cpp)
target_link_libraries(Macrocirculation_Test_BufferSystem PRIVATE LibMacrocirculation)
target_link_libraries(Macrocirculation_Test_BufferSystem PRIVATE Macrocirculation_Test_Runner)

add_executable(Macrocirculation_Test_SendAndReceiveBuffers test_send_and_receive_buffers.cpp)
target_link_libraries(Macrocirculation_Test_SendAndReceiveBuffers PRIVATE LibMacrocirculation)
target_link_libraries(Macrocirculation_Test_SendAndReceiveBuffers PRIVATE Macrocirculation_Test_Runner)
